# eagle-helper

./: README.md  pyproject.toml
src/eagle_helper/: __init__.py  config.py  utils.py
src/eagle_helper/cli/: __init__.py  base.py
src/eagle_helper/coms/: gitPull.py  locales.py
src/eagle_helper/files/i18n/: zh_CN.json
